# Baidu_Meux_ComfyTools

./: README.md  __init__.py  node.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: artistic_text_preview.py  image_loader.py  image_mask_loader.py  mask_fill_holes.py  mask_loader.py  multi_save_image.py  realesrgan_upscale.py  rmbg_birefnet.py  simple_llm_node.py  size_preset_safe.py  smart_exact_resize.py
